--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -31,6 +31,7 @@
 
   .navbar-center {
     flex-grow: 1;
+    margin-left: $navbar-height;
     flex-direction: column;
     justify-content: center;
   }
@@ -44,28 +45,31 @@
   .pagination-page {
     padding: 0.75rem 0;
   }
+}
 
-  .post-navigation {
-    display: flex;
-    flex-flow: row wrap;
-    padding-top: 1.5rem;
-    margin-top: 1.5rem;
-    border-top: 4px solid rgba(0, 0, 0, 0.05);
-    justify-content: space-between;
+.post-navigation {
+  display: flex;
+  flex-flow: row wrap;
+  padding: 1.5rem 0;
+  margin: 1.5rem 0;
+  border-top: 4px solid rgba(0, 0, 0, 0.05);
+  justify-content: space-between;
 
-    & &__previous,
-    & &__next {
-      margin: 1rem 0;
-      flex: 0 0 100%;
+  & &__previous,
+  & &__next {
+    margin: 1rem 0;
+    flex: 0 0 100%;
+    background-color: red;
+    border-color: red;
+    color: #fff;
 
-      @media screen and (min-width: 1024px) {
-        flex-basis: calc(50% - 2rem);
-      }
+    @include from($desktop) {
+      flex-basis: calc(50% - 2rem);
     }
+  }
 
-    .button {
-      white-space: normal;
-      height: auto;
-    }
+  .button {
+    white-space: normal;
+    height: auto;
   }
 }
